# ot-rtos

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
examples/apps/: CMakeLists.txt
examples/apps/aogh/: aogh.cpp
include/apps/google_cloud_iot/: client_cfg.h  mqtt_client.hpp  mqtt_test.h
include/apps/misc/: nat64_utils.h  time_ntp.h
include/cfgs/: mbedtls-config.h  sdk_config.h
include/common/: default_uart.h  entropy_utils.h  log.h  uart_io.h
include/openthread/: openthread-freertos.h  ot_api_call.h  uart_lock.h
include/portable/: portable.h
script/: test
src/apps/google_cloud_iot/: mqtt_client.cpp
src/apps/misc/: nat64_utils.c  time_ntp.cpp
src/apps/test/: CMakeLists.txt  http.c  mqtt.cpp  tcp_utils.c  user.c  user.h  weave_pair.cpp
src/common/: default_uart.c  entropy_utils.c  uart_io.c
src/core/utils/: entropy_utils.c
src/examples/ot_cli/: main.c
src/openthread/: netif.cpp  netif.h  openthread_freertos.c  uart_lock.c
